# wayward-metrics

./: .gitignore  README.md
c/: CMakeLists.txt  README.md
c/include/wayward/: metrics.h
c/include/wayward/metrics/: allocator_system.h  bert_encode.h  buffer.h  codec.h  connection.h  frame.h  message_queue.h  socket.h  thread.h  version.h
c/include/wayward/metrics/private/: bert_constants.h
c/include/wayward/metrics/reporting/: base.h  constants.h  context.h  memory.h  reporter.h
c/include/wayward/metrics/reporting/private/: per_thread_reporter_data.h  reporter.h
c/src/: allocator.c  bert_encode.c  buffer.c  codec.c  connection.c  file.c  frame.c  message_queue.c  socket.c  version.c
c/src/posix/: file.c  thread.c
c/src/reporting/: base.c  context.c  memory.c  per_thread_reporter_data.c  reporter.c
doc/: AnalysisThreadingLocking.md  WireProtocol.md
python/: README.md
python/wayward/analytics/client/: factory.py  protocol.py
python/wayward/analytics/core/: framing.py  protocol.py  session.py  sessionstore.py
python/wayward/analytics/reporter/: __init__.py
python/wayward/analytics/server/: factory.py  protocol.py
python/wayward/metrics/client/: factory.py  protocol.py
python/wayward/metrics/core/: constants.py  framing.py  protocol.py  sessionstore.py
python/wayward/metrics/reporter/: __init__.py
python/wayward/metrics/server/: factory.py  protocol.py
reporting/c/: CMakeLists.txt  README.md
reporting/c/include/wayward/: metrics.h
reporting/c/include/wayward/metrics/: allocator.h  backtrace.h  buffer.h  codec.h  config.h  connection.h  file.h  message_queue.h  socket.h  stdwwm.h  thread.h  time.h  types.h  version.h
reporting/c/include/wayward/metrics/posix/: platform.h
reporting/c/include/wayward/metrics/reporting/: memory.h  reporter.h
reporting/c/include/wayward/metrics/reporting/private/: reporter.h
reporting/c/include/wayward/metrics/windows/: platform.h
reporting/c/src/: CMakeLists.txt  allocator.c  allocator_system.c  buffer.c  codec.c  connection.c  message_queue.c
reporting/c/src/posix/: backtrace.c  file.c  socket.c  thread.c
reporting/c/src/reporting/: context.c  memory.c  reporter.c
reporting/c/src/windows/: backtrace.c  file.c  socket.c  thread.c  time.c
reporting/c/test/: CMakeLists.txt  main.c
webclient/: index.html
webclient/css/: wayward.css
webclient/data/: sample-log-message-channels.js  sample-log-messages.js  sample-memory-heaps.js  sample-memory-objects.js
webclient/js/: logmessagespanel.js  viewport.js
webclient/js/core/: messagebus.js
webclient/js/memory/: heapspanel.js  objectspanel.js
webclient/static/: welcome.html
webserver/: CMakeLists.txt  webserver.conf
webserver/include/: bootstrapper.h  config.h  mime_types.h  url_resolver.h
webserver/include/http/: server.h
webserver/include/wsgi/: context.h  input_stream.h  module.h  request.h  server.h
webserver/src/: CMakeLists.txt  bootstrapper.c  main.c  mime_types.c  url_resolver.c
webserver/src/http/: server.c
webserver/src/wsgi/: context.c  input_stream.c  module.c  request.c  server.c
